--- a/pages/templates/navbar.html
+++ b/pages/templates/navbar.html
@@ -34,6 +34,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'infoTable' %}">• Device Info Table</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'db_test' %}">• DB Test</a>
+        </li>
       </ul>
     </div>
   </nav>
