--- a/pages/templates/navbar.html
+++ b/pages/templates/navbar.html
@@ -26,13 +26,13 @@
           <a class="nav-link" href="{% url 'export' %}">• Export Versions to Excel</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'genelindirme' %}">• Update Status</a>
+          <a class="nav-link" href="{% url 'update_status' %}">• Update Status</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'gmpMesajlari' %}">• GMP Messages</a>
+          <a class="nav-link" href="{% url 'gmp_messages' %}">• GMP Messages</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'infoTable' %}">• Device Info Table</a>
+          <a class="nav-link" href="{% url 'info_table' %}">• Device Info Table</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'db_test' %}">• DB Test</a>
