gmp messages search bars

--- a/pages/templates/db_test.html
+++ b/pages/templates/db_test.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <div style="color:white; text-align:center; font-size:400%; padding:10px; background-color:#247BFB">TSM Monitoring Services</div>
-
 <head>
     <meta charset="UTF-8">
     <title>TSM | DB Test</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
 </head>
 {% extends 'navbar.html' %}
 
 {% block content %}
 <body>
-
-<script type="text/javascript" src="{{ STATIC_URL }} /static/jquery-3.5.0.min.js">
+<script type="text/javascript" src="/static/jquery-3.5.0.min.js">
 </script>
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js">
 </script>
