--- a/pages/templates/export.html
+++ b/pages/templates/export.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <div style="color:white; text-align:center; font-size:400%; padding:10px; background-color:#247BFB">TSM Monitoring Services</div>
-
 <head>
     <meta charset="UTF-8">
     <title>TSM | Export Version to Excel</title>
@@ -11,11 +10,8 @@
 
 {% block content %}
 <body>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script type="text/javascript" src="{{ STATIC_URL }} /static/jquery-3.5.0.min.js">
-</script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js">
-</script>
+<script type="text/javascript" src="/static/jquery-3.5.0.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
 <script> $(document).ready(function() {
     var table = $('#example').DataTable( {
@@ -26,10 +22,8 @@
     $('a.toggle-vis').on( 'click', function (e) {
         e.preventDefault();
 
-        // Get the column API object
         var column = table.column( $(this).attr('data-column') );
 
-        // Toggle the visibility
         column.visible( ! column.visible() );
     } );
 } );
