--- a/pages/templates/navbar.html
+++ b/pages/templates/navbar.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta name="viewport" content="widht=device-width initial-scale=1.0">
 </head>
-<script type="text/javascript" src="{{ STATIC_URL }} /static/jquery-3.5.0.min.js">
+<script type="text/javascript" src="/static/jquery-3.5.0.min.js">
 </script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
