--- a/pages/templates/navbar.html
+++ b/pages/templates/navbar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="widht=device-width initial-scale=1.0">
+    <meta name="viewport">
 </head>
 <script type="text/javascript" src="/static/jquery-3.5.0.min.js">
 </script>
