first time data received on front-end

--- a/pages/templates/update_status.html
+++ b/pages/templates/update_status.html
@@ -29,6 +29,14 @@
 } );
 </script>
 <div class="container" style="width=device-width, initial-scale=1.0">
+    <div class="right" style="font-size=150%">
+        <label for="qsearch">SC:</label>
+        <input id="txtSearch" type="text" name="txtSearch"/>
+        <label for="qsearch">Binary Name:</label>
+        <input id="txtBinaryName" type="text" name="txtBinaryName"/>
+        <input id="checkStop" name="checkStop" type="checkbox" value='1'><label>Stop Refresh</label>
+        <div id="ScAndName" style="width: 1100px;"></div>
+    </div>
     <table id="example" class="display" width="50%" align="center" style="font-size:150%">
         <thead>
         <tr>
