--- a/pages/templates/db_test.html
+++ b/pages/templates/db_test.html
@@ -5,78 +5,123 @@
     <meta charset="UTF-8">
     <title>TSM | DB Test</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.5/css/responsive.dataTables.min.css">
+    <style> td.details-control {
+    background: url('../static/resources/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    background: url('../static/resources/details_close.png') no-repeat center center;
+}
+</style>
 </head>
 {% extends 'navbar.html' %}
 
 {% block content %}
 <body>
-<script type="text/javascript" src="/static/jquery-3.5.0.min.js">
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js">
 </script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js">
+<script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
+<script type="text/javascript" src="/static/js/msgType.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js">
 </script>
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
-<script> $(document).ready(function() {
-    var table = $('#example').DataTable( {
-        "scrollY": "200px",
-        "paging": false
-    } );
-
-    $('a.toggle-vis').on( 'click', function (e) {
-        e.preventDefault();
-
-        // Get the column API object
-        var column = table.column( $(this).attr('data-column') );
-
-        // Toggle the visibility
-        column.visible( ! column.visible() );
-    } );
-} );
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.2.5/js/dataTables.responsive.min.js">
 </script>
+<script>
+function format(value) {
+      return '<div>Received Message: ' + value + '</div>';
+  }
+  $(document).ready(function () {
+      var table = $('#example').DataTable({});
+
+      // Add event listener for opening and closing details
+      $('#example').on('click', 'td.details-control', function () {
+          var tr = $(this).closest('tr');
+          var row = table.row(tr);
+
+          if (row.child.isShown()) {
+              // This row is already open - close it
+              row.child.hide();
+              tr.removeClass('shown');
+          } else {
+              // Open this row
+              row.child(format(tr.data('child-value'))).show();
+              tr.addClass('shown');
+          }
+      });
+  });
+</script>
+<link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />
+<div id="content-wrap" class="clear" style="font-size:120%" align="center">
+    <!-- content -->
+    <div id="content">
+        <!-- main -->
+        <div id="main">
+            <div class="post">
+                <div class="right">
+                    <label for="startDate">Start Date:</label>
+                    <input type="date" name="startDate" id="startDate"/>
+                    <label for="endDate">End Date:</label>
+                    <input type="date" name="endDate" id="endDate"/>
+                    <label for="qsearch">Serial NO:</label>
+                    <input id="txtSearch" type="text" name="txtSearch"/>
+                    <label for="msgType">Message Type:</label>
+                    <select class="js-basic-multiple" name="msgType" multiple="multiple" id="msgType">
+                      <option value="FF8802">Parametre (FF8802)</option>
+                      <option value="FF887D">Ek Parametre (FF887D)</option>
+                      <option value="FF887F">Müşteri Bilgisi (FF887F)</option>
+                      <option value="FF887B">UPD Bilgisi (FF887B)</option>
+                      <option value="FF8803">Z Raporu (FF8803)</option>
+                      <option value="FF8879">Günlük Rapor (FF8879)</option>
+                      <option value="FF8813">Aylık Rapor (FF8813)</option>
+                      <option value="FF8804">Fiş Bilgileri (FF8804)</option>
+                      <option value="FF8806">Olay Kayıtları (FF8806)</option>
+                      <option value="FF8807">İstatistik (FF8807)</option>
+                    </select>
+                    <input type="submit" name="submit" id="submit" value="OK">
+                    <label for="qsearch">Distinct devices in the past month: <?php echo $number_of_distinct_devices_in_the_last_month ?></label>
+                    <div id="gmpMessages"></div>
+                </div>
+            </div>
+        </div>
+        <!-- /main -->
+    </div>
+</div>
 <div class="container" style="width=device-width, initial-scale=1.0">
-        <table id="example" class="display" width="50%" align="center" style="font-size:150%">
+    <table id="example" class="display nowrap" style="font-size:150%">
         <thead>
-        <tr>
-            <th>ID</th>
-            <th>IP</th>
-            <th>Serial Req</th>
-            <th>Serial Trans</th>
-            <th>Clenght</th>
-            <th>XML Name</th>
-        </tr>
+            <tr>
+                <th></th>
+                <th>Date Received</th>
+                <th>Serial No</th>
+                <th>Message Type</th>
+                <th>IP</th>
+            </tr>
         </thead>
         <tbody>
         {% if items %}
             {% for item in items %}
-            <tr>
+            <tr data-child-value={{item.parsed_data}} >
+                <td class="details-control">
                 <td> {{item.date_received}} </td>
                 <td> {{item.serial}} </td>
-                <td> {{item.id}} </td>
-                <td> {{item.ip}} </td>
                 <td> {{item.msg_type}} </td>
-                <td> {{item.parsed_data}} </td>
+                <td> {{item.ip}} </td>
             </tr>
             {% endfor %}
         {% else %}
-    <div class="col-md-12">
-        <p>Listelenecek Veri Yok</p>
-    </div>
+            <td> Listlenecek Veri Yok </td>
     {% endif %}
         </tbody>
         <tfoot>
-        <tr>
-            <th>ID</th>
-            <th>IP</th>
-            <th>Serial Req</th>
-            <th>Serial Trans</th>
-            <th>Clenght</th>
-            <th>XML Name</th>
-            <th>Binary Name</th>
-            <th>Chunk No</th>
-            <th>Date Inserted</th>
-            <th>Chunk Total</th>
-            <th>Target Version</th>
-            <th>Package Type</th>
-        </tr>
+            <tr>
+                <th></th>
+                <th>Date Received</th>
+                <th>Serial No</th>
+                <th>Message Type</th>
+                <th>IP</th>
+            </tr>
         </tfoot>
     </table>
 </div>
@@ -84,3 +129,138 @@
 </body>
 {% endblock %}
 </html>
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<div style="color:white; text-align:center; font-size:400%; padding:10px; background-color:#247BFB">TSM Monitoring-->
+<!--    Services-->
+<!--</div>-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>TSM | GMP Messages</title>-->
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+
+<!--</head>-->
+<!--{% extends 'navbar.html' %}-->
+
+<!--{% block content %}-->
+<!--<body>-->
+<!--<script src="http://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>-->
+<!--<script type="text/javascript" src="/static/js/msgType.js"></script>-->
+<!--<script type="text/javascript" src="/static/js/table.js"></script>-->
+<!--<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>-->
+<!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">-->
+<!--<link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />-->
+<!--<script>-->
+<!--    function format ( d ) {-->
+<!--    // `d` is the original data object for the row-->
+<!--    return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'+-->
+<!--        '<tr>'+-->
+<!--            '<td>Full name:</td>'+-->
+<!--            '<td>'+d.parsed_data+'</td>'+-->
+<!--        '</tr>'+-->
+<!--    '</table>';-->
+<!--}-->
+
+<!--$(document).ready(function() {-->
+<!--    var table = $('#example').DataTable( {-->
+<!--        "order": [[1, 'asc']]-->
+<!--    } );-->
+
+<!--    // Add event listener for opening and closing details-->
+<!--    $('#example tbody').on('click', 'td.details-control', function () {-->
+<!--        var tr = $(this).closest('tr');-->
+<!--        var row = table.row( tr );-->
+
+<!--        if ( row.child.isShown() ) {-->
+<!--            // This row is already open - close it-->
+<!--            row.child.hide();-->
+<!--            tr.removeClass('shown');-->
+<!--        }-->
+<!--        else {-->
+<!--            // Open this row-->
+<!--            row.child( format(row.data()) ).show();-->
+<!--            tr.addClass('shown');-->
+<!--        }-->
+<!--    } );-->
+<!--} );-->
+<!--</script>-->
+<!--<div id="content-wrap" class="clear" style="font-size:120%" align="center">-->
+<!--    &lt;!&ndash; content &ndash;&gt;-->
+<!--    <div id="content">-->
+<!--        &lt;!&ndash; main &ndash;&gt;-->
+<!--        <div id="main">-->
+<!--            <div class="post">-->
+<!--                <div class="right">-->
+<!--                    <label for="startDate">Start Date:</label>-->
+<!--                    <input type="date" name="startDate" id="startDate"/>-->
+<!--                    <label for="endDate">End Date:</label>-->
+<!--                    <input type="date" name="endDate" id="endDate"/>-->
+<!--                    <label for="qsearch">Serial NO:</label>-->
+<!--                    <input id="txtSearch" type="text" name="txtSearch"/>-->
+<!--                    <label for="msgType">Message Type:</label>-->
+<!--                    <select class="js-basic-multiple" name="msgType" multiple="multiple" id="msgType">-->
+<!--                      <option value="FF8802">Parametre (FF8802)</option>-->
+<!--                      <option value="FF887D">Ek Parametre (FF887D)</option>-->
+<!--                      <option value="FF887F">Müşteri Bilgisi (FF887F)</option>-->
+<!--                      <option value="FF887B">UPD Bilgisi (FF887B)</option>-->
+<!--                      <option value="FF8803">Z Raporu (FF8803)</option>-->
+<!--                      <option value="FF8879">Günlük Rapor (FF8879)</option>-->
+<!--                      <option value="FF8813">Aylık Rapor (FF8813)</option>-->
+<!--                      <option value="FF8804">Fiş Bilgileri (FF8804)</option>-->
+<!--                      <option value="FF8806">Olay Kayıtları (FF8806)</option>-->
+<!--                      <option value="FF8807">İstatistik (FF8807)</option>-->
+<!--                    </select>-->
+<!--                    <input type="submit" name="submit" id="submit" value="OK">-->
+<!--                    <label for="qsearch">Distinct devices in the past month: <?php echo $number_of_distinct_devices_in_the_last_month ?></label>-->
+<!--                    <div id="gmpMessages"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; /main &ndash;&gt;-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="container">-->
+<!--    <table id="example" class="display" align="center" style="font-size:150%">-->
+<!--        <thead>-->
+<!--        <tr>-->
+<!--            <th>Date Received</th>-->
+<!--            <th>Serial NO</th>-->
+<!--            <th>Message Type</th>-->
+<!--            <th>IP</th>-->
+<!--            <th>Received Message</th>-->
+<!--            <th>Sent Message</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        {% if items %}-->
+<!--            {% for item in items %}-->
+<!--            <tr>-->
+<!--                <td> {{item.date_received}} </td>-->
+<!--                <td> {{item.serial}} </td>-->
+<!--                <td> {{item.msg_type}} </td>-->
+<!--                <td> {{item.ip}} </td>-->
+<!--                <td> {{item.parsed_data}} </td>-->
+<!--                <td> {{item.parsed_data}} </td>-->
+<!--            </tr>-->
+<!--            {% endfor %}-->
+<!--        {% else %}-->
+<!--            <td> Listlenecek Veri Yok </td>-->
+<!--    {% endif %}-->
+<!--        </tbody>-->
+<!--        <tfoot>-->
+<!--        <tr>-->
+<!--            <th>Date Received</th>-->
+<!--            <th>Serial NO</th>-->
+<!--            <th>Message Type</th>-->
+<!--            <th>IP</th>-->
+<!--            <th>Received Message</th>-->
+<!--            <th>Sent Message</th>-->
+<!--        </tr>-->
+<!--        </tfoot>-->
+<!--    </table>-->
+<!--</div>-->
+<!--</body>-->
+<!--{% endblock %}-->
+<!--</html>-->
