--- a/pages/templates/gmp_messages.html
+++ b/pages/templates/gmp_messages.html
@@ -1,25 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<div style="color:white; text-align:center; font-size:400%; padding:10px; background-color:#247BFB">TSM Monitoring
-    Services
-</div>
+<div style="color:white; text-align:center; font-size:400%; padding:10px; background-color:#247BFB">TSM Monitoring Services</div>
 <head>
     <meta charset="UTF-8">
     <title>TSM | GMP Messages</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.5/css/responsive.dataTables.min.css">
+    <style> td.details-control {
+    background: url('../static/resources/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    background: url('../static/resources/details_close.png') no-repeat center center;
+}
+</style>
 </head>
 {% extends 'navbar.html' %}
 
 {% block content %}
 <body>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
-<link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js">
+</script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
 <script type="text/javascript" src="/static/js/msgType.js"></script>
-<script type="text/javascript" src="/static/js/table.js"></script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js">
+</script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.2.5/js/dataTables.responsive.min.js">
+</script>
+<script>
+function format(value) {
+      return '<div>Received Message: ' + value + '</div>';
+  }
+  $(document).ready(function () {
+      var table = $('#example').DataTable({});
+
+      // Add event listener for opening and closing details
+      $('#example').on('click', 'td.details-control', function () {
+          var tr = $(this).closest('tr');
+          var row = table.row(tr);
+
+          if (row.child.isShown()) {
+              // This row is already open - close it
+              row.child.hide();
+              tr.removeClass('shown');
+          } else {
+              // Open this row
+              row.child(format(tr.data('child-value'))).show();
+              tr.addClass('shown');
+          }
+      });
+  });
+</script>
+<link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />
 <div id="content-wrap" class="clear" style="font-size:120%" align="center">
     <!-- content -->
     <div id="content">
@@ -55,43 +88,40 @@
         <!-- /main -->
     </div>
 </div>
-<div class="container">
+<div class="container" style="width=device-width, initial-scale=1.0">
     <table id="example" class="display" align="center" style="font-size:150%">
         <thead>
-        <tr>
-            <th>Date Received</th>
-            <th>Serial NO</th>
-            <th>Message Type</th>
-            <th>IP</th>
-            <th>Received Message</th>
-            <th>Sent Message</th>
-        </tr>
+            <tr>
+                <th></th>
+                <th>Date Received</th>
+                <th>Serial No</th>
+                <th>Message Type</th>
+                <th>IP</th>
+            </tr>
         </thead>
         <tbody>
         {% if items %}
             {% for item in items %}
-            <tr>
+            <tr align="center" data-child-value="{{item.parsed_data}}" >
+                <td class="details-control">
                 <td> {{item.date_received}} </td>
                 <td> {{item.serial}} </td>
                 <td> {{item.msg_type}} </td>
                 <td> {{item.ip}} </td>
-                <td> {{item.parsed_data}} </td>
-                <td> {{item.parsed_data}} </td>
             </tr>
             {% endfor %}
         {% else %}
-            <td> Listlenecek Veri Yok </td>
+            <td> Listelenecek Veri Yok </td>
     {% endif %}
         </tbody>
         <tfoot>
-        <tr>
-            <th>Date Received</th>
-            <th>Serial NO</th>
-            <th>Message Type</th>
-            <th>IP</th>
-            <th>Received Message</th>
-            <th>Sent Message</th>
-        </tr>
+            <tr>
+                <th></th>
+                <th>Date Received</th>
+                <th>Serial No</th>
+                <th>Message Type</th>
+                <th>IP</th>
+            </tr>
         </tfoot>
     </table>
 </div>
